--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobo</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="/img/icons8-globe-africa-3d-fluency-32.png" type="image/png">
 </head>
 <body>
    <header class="header">
